# zerotier-prometheus-sd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  coverage.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  test.yml
tests/unit/: test_app.py
tests/unit/api/: test_api.py
tests/unit/service/: test_zerotier.py
zerotier_prometheus_sd/: app.py  config.py
zerotier_prometheus_sd/api/: api.py  schemas.py
zerotier_prometheus_sd/service/: zerotier.py
