[tool.poetry]
name = "zerotier-prometheus-sd"
version = "0.1.0"
description = ""
authors = ["Tyler Christiansen <code@tylerc.me>"]
readme = "README.md"
packages = [{include = "zerotier_prometheus_sd"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.94"
uvicorn = "^0.21"
pydantic = "^1.10"
httpx = {extras = ["http2"], version = "^0.23"}
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1"
pytest = "^7.2"
radon = "^5.1"
bandit = "^1.7"
prospector = "^1.9"
mypy = "^1.1"
pyupgrade = "^3.3"
isort = "^5.12"
pre-commit = "^3.1"
ipython = "^8.10"
pip-audit = "^2.5"
coverage = {extras = ["toml"], version = "^7.2"}
pytest-cov = "^4.0"
pytest-httpx = "^0.21"
pytest-asyncio = "^0.20"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
