[tool.poetry]
name = "zerotier-prometheus-sd"
version = "0.1.0"
description = ""
authors = ["Tyler Christiansen <code@tylerc.me>"]
readme = "README.md"
packages = [{include = "zerotier_prometheus_sd"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97"
uvicorn = "^0.22"
pydantic = "^1.10"
httpx = {extras = ["http2"], version = "^0.23"}
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3"
pytest = "^7.3"
radon = "^6.0"
bandit = "^1.7"
prospector = "^1.10"
mypy = "^1.3"
pyupgrade = "^3.4"
isort = "^5.12"
pre-commit = "^3.3"
ipython = "^8.13"
pip-audit = "^2.5"
coverage = {extras = ["toml"], version = "^7.2"}
pytest-cov = "^4.0"
pytest-httpx = "^0.21"
pytest-asyncio = "^0.21"

[tool.coverage.run]
branch = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
